# orbital

./: .gitignore  ALTERNATIVE_SOLUTION.md  ALTERNATIVE_SPAWN_SIMPLE.md  CLEANUP_SUMMARY.md  COMPLETE_PHASE2_GUIDE.md  CURRENT_STATUS.md  Cargo.toml  DOCUMENTATION_INDEX.md  DOUBLE_FAULT_FIX.md  DOUBLE_FAULT_FIX_SUMMARY.md  DOUBLE_FAULT_ROOT_CAUSE_ANALYSIS.md  FIXES_APPLIED_SUMMARY.md  OPTION_B_COMPLETE.md  PHASE2B_COMPLETE.md  PHASE2C_COMPLETE.md  PHASE2_COMPLETE.md  PHASE2_COMPLETION_CHECKLIST.md  PHASE2_FIXES_APPLIED.md  PHASE2_INTEGRATION_GUIDE.md  PHASE2_KERNEL_STACKS.md  PHASE2_PREEMPTIVE_MULTITASKING.md  PHASE2_SUMMARY.md  PHASE3_USERSPACE_SHELL.md  PHASE_10_COMPLETION.md  PHASE_11_COMPLETION.md  PHASE_3_COMPLETION.md  PHASE_4_1_COMPLETION.md  PHASE_4_2_COMPLETION.md  PHASE_4_COMPLETION.md  PHASE_4_PLAN.md  PHASE_5_COMPLETION.md  PHASE_6_COMPLETION.md  PHASE_9_COMPLETION.md  README.md  REFACTORING.md  SAFE_SPAWN_IMPLEMENTATION.md  SESSION_COMPLETE.md  SESSION_SUMMARY.md  SESSION_SUMMARY_PHASE3.md  SESSION_SUMMARY_PHASE4.md  (+15 more)
.cargo/: config.toml
boot/: Cargo.toml
boot/src/: main.rs
common/: Cargo.toml
docs/: 11. Syscall & IPC Boundary Specification.md  13. Syscall Skeleton Design.md  2. Userspace Architecture.md  6. Management Plane (cli & Api).md  9. Security Model (RBAC & Capabilities).md  IMPLEMENTATION_STATUS.md  Minimal IPC Transport Design.md  Phase1_Enhancements.md  Phase2_Task_Execution.md  README.md  Task_Execution.md  Task_Launcher.md
kernel/: Cargo.toml  build.rs
src/: allocator.rs  main.rs  shell.rs
tests/: basic_boot.rs  heap_allocation.rs  (+2 more)
(+58 files in other folders)
