[workspace]
members = [
    "kernel",
    "boot",
    "common",
]
exclude = [
    "userspace/ipc",
    "userspace/managementd",
    "userspace/cli",
    "userspace/minimal",
]
resolver = "2"
default-members = ["boot"]

[workspace.package]
version = "0.1.0"
authors = ["Gilang Adi S <contact@gilang.dev>"]
edition = "2024"
